--- a/_config.yml
+++ b/_config.yml
@@ -11,14 +11,13 @@ excerpt_separator: "<!--more-->"
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : John Doe Website
+title : Key(zmj1316) Blog
 tagline: Site Tagline
 author :
-  name : John Doe
-  email : john.doe@gitmail.org
-  github : johndoe
-  twitter : johndoe
-  feedburner : johndoefeedname
+  name : Key Zhang
+  email : zmj1316@gmail.com
+  github : zmj1316
+  twitter : zmj1316
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -28,7 +27,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://johndoe.github.io
+production_url : http://zmj1316.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
