--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ excerpt_separator: "<!--more-->"
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Key(zmj1316) Blog
+title : Key(zmj1316)'s Blog
 tagline: Site Tagline
 author :
   name : Key Zhang
