--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : disqus
+    provider : duoshuo
     disqus :
       short_name : zmj1316githubio
     livefyre :
