--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ JB :
   analytics :
     provider : google 
     google : 
-        tracking_id : 'UA-***'
+        tracking_id : 'UA-87688694-1'
     getclicky :
       site_id : 
     mixpanel :
