--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 markdown: kramdown
 highlighter: rouge
-permalink: /:categories/:title.html 
+permalink: /:categories/:title 
 
 github: zmj1316
 author: "Key Zhang"
